# django-pdf-view

./: .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  development.md  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: changelog-configuration.json  ci.yml  releases.yml
core/: asgi.py  settings.py  urls.py  wsgi.py
django_pdf/: apps.py  pdf.py  pdf_page.py  services.py  urls.py  views.py
django_pdf/static/django_pdf/style/: pdf.css
django_pdf/static/django_pdf/style/example/: pdf_example.css
django_pdf/static/style/: pdf.css
django_pdf/static/style/example/: pdf_example.css
django_pdf/templates/: page.html  pdf.html
django_pdf/templates/django_pdf/: page.html  pdf.html
django_pdf/templates/django_pdf/example/: page_example.html  pdf_example.html
django_pdf/templates/django_pdf/examples/: multipage_1.html  multipage_2.html  multipage_3.html  singlepage.html
django_pdf/templates/example/: page_example.html  pdf_example.html
django_pdf/tests/: test_create_pdf.py  test_css_template_filter.py  test_example_pdf_view.py  test_multipage_example_pdf_view.py  test_pdf.py  test_pdf_page.py  test_pdf_view.py  test_singlepage_example_pdf_view.py
django_pdf/views/: __init__.py  example_pdf_view.py  examples.py  pdf_view.py
django_pdf_view/: apps.py  context_managers.py  decorators.py  pdf.py  pdf_page.py  services.py  urls.py  utils.py  views.py
django_pdf_view/static/cv/style/: cv.css  left.css  right.css
django_pdf_view/static/django_pdf_view/css/: pdf.css
django_pdf_view/static/django_pdf_view/css/examples/: multi_page.css  single_page.css
django_pdf_view/static/django_pdf_view/style/: example.css
django_pdf_view/templates/cv/: cv.html
django_pdf_view/templates/django_pdf_view/: pdf.html
django_pdf_view/templates/django_pdf_view/examples/: multipage_1.html  multipage_2.html  multipage_3.html  single_page.html  singlepage.html
django_pdf_view/templatetags/: css.py  svg.py
django_pdf_view/tests/: test_create_pdf.py  test_css_template_filter.py  test_multi_page_example_pdf_view.py  test_multipage_example_pdf_view.py  test_pdf.py  test_pdf_page.py  test_pdf_view.py  test_render_css.py  test_single_page_example_pdf_view.py  test_singlepage_example_pdf_view.py  test_svg_template_tag.py  test_temporary_env_var.py  test_tmp_env_var.py  test_with_tmp_env_var.py
django_pdf_view/views/: __init__.py  cv_pdf_view.py  examples.py  pdf_view.py
example/: urls.py  views.py
example/static/example/css/: multi_page.css  single_page.css
example/templates/example/: multi_page.html
example/tests/: test_multi_page_example_pdf_view.py  test_single_page_example_pdf_view.py
meta/: MANIFEST.in  README.md  pyproject.toml
requirements/: base.txt  dev.txt  test.txt
scripts/: build  build.sh  release  release.sh
