[tool.poetry]
name = "django-pdf-view"
version = "2.2.0"
description = "Django app for seamlessly displaying and downloading PDF documents in browser"
authors = ["Miloš Roknić <roknic.milos.994@gmail.com>"]
maintainers = ["Miloš Roknić <roknic.milos.994@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["pdf", "pdf view", "django pdf", "django pdf view", "generate pdf", "django generate pdf"]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
homepage = "https://github.com/roknicmilos/django-pdf-view"
repository = "https://github.com/roknicmilos/django-pdf-fixtures/"
documentation = "https://github.com/roknicmilos/django-pdf-fixtures/blob/main/README.md"
issues = "https://github.com/roknicmilos/django-pdf-view/issues"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
pdfkit = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-quotes = "^3.4.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
tox = "^4.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
