[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-pdf-view"
version = "2.1.0"
description = "Django app for seamlessly displaying and downloading PDF documents in browser."
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = ["pdf", "pdf view", "django pdf", "django pdf view", "generate pdf", "django generate pdf"]
license = { text = "MIT" }
authors = [
    { name = "Miloš Roknić", email = "roknic.milos.994@gmail.com" }
]
maintainers = [
    { name = "Miloš Roknić", email = "roknic.milos.994@gmail.com" }
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=4.0,<6.0",
    "pdfkit==1.0.0",
]

[project.urls]
homepage = "https://github.com/roknicmilos/django-pdf-view"
bug-tracker = "https://github.com/roknicmilos/django-pdf-view/issues"
